(upd) app base structure added

--- a/angular.json
+++ b/angular.json
@@ -49,6 +49,9 @@
             "styles": [
               "src/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": ["src/styles"]
+            },
             "scripts": []
           },
           "configurations": {
